desafio4/k8s/ingress/ingress_apps_1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-cd
spec:
  ingressClassName: ingress-nginx-public
  rules:
  - host: appc.henrq.tk
    http:
      paths:
      - path: "/"
        pathType: ImplementationSpecific
        backend:
          service:
            name: app-c
            port:
              number: 80
  - host: appd.henrq.tk
    http:
      paths:  
      - path: "/"
        pathType: ImplementationSpecific
        backend:
          service:
            name: app-d
            port:
              number: 80
