desafio4/k8s/ingress/ingress_mon.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-mon
  namespace: monitoramento
spec:
  ingressClassName: ingress-nginx-public
  rules:
  - host: monh.henrq.tk
    http:
      paths:  
      - path: "/"
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
